    and diff new sections/fields not yet covered in the four former
    tools.
  - Legacy scripts for bmc-config, ipmi-pef-config,
    ipmi-sensors-config, and ipmi-chassis-config will point to the new
    tool with all appropriate options to ensure full backwards
    compatability.
  - The ipmi-pef-config --info option has been made legacy.  It is
    still supported but no longer advertised.

Tools - Bug Fixes/Minor Changes
-------------------------------

Libraries
---------

FreeIPMI 1.3.1 - 08/22/13
-------------------------

Tools - New Features
--------------------
o In all tools reporting time (ipmi-sel, ipmi-fru, ipmi-oem,
  bmc-device, ipmi-sensors, ipmi-dcmi), timestamps are now reporting
  under the assumption the timestamp is already in localtime (compared
  to being in UTC time and converted to localtime).  This is by
  definition in the IPMI specification.
o In all tools reporting time (ipmi-sel, ipmi-fru, ipmi-oem,
  bmc-device, ipmi-sensors, ipmi-dcmi), support --utc-to-localtime,
  --localtime-to-utc, and --utc-offset options to allow users to
  adjust timestamps as needed for certain environments.
o In ipmi-fru, support output of DDR3 SDRAM modules.
o In ipmi-fru, support output of new FRU multirecords, most notably
  extended DC output and extended DC load (per FRU Revision 1.2
  update).
o In bmc-device, support --get-sel-time-utc-offset and
  --set-sel-time-utc-offset.

Tools - Bug Fixes/Minor Changes
-------------------------------
o In ipmi-fru, report power supply low/high end voltage ranges as
  signed numbers (per FRU Revision 1.2 update).
o In ipmi-fru, output "unspecified" for manufacturing date/time or
  peak capacity as appropriate (per FRU Revision 1.2 update).
o In ipmi-fru, bridge additional FRU entries as appropriate. 
o In all tools reporting time (ipmi-sel, ipmi-fru, ipmi-oem,
  bmc-device, ipmi-sensors, ipmi-dcmi), special timestamps such as
  Post-Init and Unspecified will now be output.