@@ -106,7 +106,7 @@ FIID Template: tmpl_cmd_oem_intel_node_manager_set_node_manager_policy_rq
     { 1,  "policy_exception_actions.send_alert", REQUIRED, LENGTH-FIXED }
     { 1,  "policy_exception_actions.shutdown_system", REQUIRED, LENGTH-FIXED }
     { 6,  "policy_exception_actions.reserved", REQUIRED, LENGTH-FIXED }
-    { 16, "power_limit", REQUIRED, LENGTH-FIXED }
+    { 16, "policy_target_limit", REQUIRED, LENGTH-FIXED }
     { 32, "correction_time_limit", REQUIRED, LENGTH-FIXED }
     { 16, "policy_trigger_limit", REQUIRED, LENGTH-FIXED }
     { 16, "statistics_reporting_period", REQUIRED, LENGTH-FIXED }
@@ -149,7 +149,7 @@ FIID Template: tmpl_cmd_oem_intel_node_manager_get_node_manager_policy_rs
     { 1,  "policy_exception_actions.send_alert", REQUIRED, LENGTH-FIXED }
     { 1,  "policy_exception_actions.shutdown_system", REQUIRED, LENGTH-FIXED }
     { 6,  "policy_exception_actions.reserved", REQUIRED, LENGTH-FIXED }
-    { 16, "power_limit", REQUIRED, LENGTH-FIXED }
+    { 16, "policy_target_limit", REQUIRED, LENGTH-FIXED }
     { 32, "correction_time_limit", REQUIRED, LENGTH-FIXED }
     { 16, "policy_trigger_limit", REQUIRED, LENGTH-FIXED }
     { 16, "statistics_reporting_period", REQUIRED, LENGTH-FIXED }
