@@ -19,12 +19,21 @@ o Support new tool ipmi-config.  Ipmi-config is a consolidated
     compatability.
   - The ipmi-pef-config --info option has been made legacy.  It is
     still supported but no longer advertised.
+o Update ipmi-oem Intel Node Manager OEM commands for changes listed
+  in Intelligent Power Node Manager 2.0 specification.
+o Update ipmi-sel to support new SEL events in Intelligent Power Node
+  Manager 2.0 specification.
 
 Tools - Bug Fixes/Minor Changes
 -------------------------------
 
 Libraries
 ---------
+o Update libfreeipmi to support Intel Node Manager payloads per Intel
+  Intelligent Power Node Manager 2.0 specification.  Some payload
+  fields may have been changed due to changes in the specification.
+o Update libfreeipmi SEL sub-library to handle new event messages in
+  Intelligent Power Node Manager 2.0 specification.
 
 FreeIPMI 1.3.1 - 08/22/13
 -------------------------
